womtool/src/test/resources/validate/wdl/wdl_draft2/invalid/bad_task/error.txt
ERROR: Missing value: Couldn't find value with name 'docker_image' in task 'oopsie' (line 8):

  runtime { docker: docker_image }
                    ^
